fix: hide scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
   height: 100vh;
   margin: 0;
+  overflow-y: hidden; /* Hide vertical scrollbar */
+  overflow-x: hidden; /* Hide horizontal scrollbar */
 }
